Resolve PLAT-14321 "Downgrade java version"