@@ -5,17 +5,17 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.garminpay.BaseIT;
 import com.garminpay.TestUtils;
 import com.garminpay.exception.GarminPayApiException;
-import com.garminpay.exception.GarminPaySDKException;
 import com.garminpay.model.response.HealthResponse;
 import com.garminpay.model.response.ECCEncryptionKeyResponse;
 import com.garminpay.model.response.OAuthTokenResponse;
 import com.garminpay.model.response.RootResponse;
 import com.garminpay.model.response.PaymentCardDeepLinkResponse;
 import com.github.tomakehurst.wiremock.client.WireMock;
-import lombok.SneakyThrows;
+import org.apache.hc.core5.http.HttpStatus;
 import org.junit.jupiter.api.Test;
 
 import java.util.Base64;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.UUID;
@@ -37,8 +37,8 @@ class GarminPayProxyIT extends BaseIT {
 
     @Test
     void canGetRootEndpoint() throws JsonProcessingException {
-        Map<String, RootResponse.HalLink> mockLinks = Map.of(
-            "self", RootResponse.HalLink.builder().href("https://api.qa.fitpay.ninja/").build()
+        Map<String, RootResponse.HalLink> mockLinks = Collections.singletonMap(
+            "self", RootResponse.HalLink.builder().href("https://localhost/").build()
         );
 
         RootResponse mockRootResponse = RootResponse.builder()
@@ -57,7 +57,7 @@ class GarminPayProxyIT extends BaseIT {
 
         assertNotNull(response);
         assertNotNull(response.getLinks().get("self"));
-        assertEquals("https://api.qa.fitpay.ninja/", response.getLinks().get("self").getHref());
+        assertEquals("https://localhost/", response.getLinks().get("self").getHref());
     }
 
     @Test
@@ -68,12 +68,10 @@ class GarminPayProxyIT extends BaseIT {
                 .withHeader("Content-Type", "application/json")
                 .withBody("{\"path\":\"/\", \"status\":404, \"message\":\"Not Found\"}")));
 
-        GarminPayApiException exception = assertThrows(GarminPayApiException.class, () -> {
-            garminPayProxy.getRootEndpoint();
-        });
+        GarminPayApiException exception = assertThrows(GarminPayApiException.class, garminPayProxy::getRootEndpoint);
 
         assertEquals("/", exception.getPath());
-        assertEquals(404, exception.getStatus());
+        assertEquals(HttpStatus.SC_NOT_FOUND, exception.getStatus());
         assertEquals("Not Found", exception.getMessage());
     }
 
@@ -85,12 +83,10 @@ class GarminPayProxyIT extends BaseIT {
                 .withHeader("Content-Type", "application/json")
                 .withBody("{\"path\":\"/\", \"status\":502, \"message\":\"Bad Gateway\"}")));
 
-        GarminPayApiException exception = assertThrows(GarminPayApiException.class, () -> {
-            garminPayProxy.getRootEndpoint();
-        });
+        GarminPayApiException exception = assertThrows(GarminPayApiException.class, garminPayProxy::getRootEndpoint);
 
         assertEquals("/", exception.getPath());
-        assertEquals(502, exception.getStatus());
+        assertEquals(HttpStatus.SC_BAD_GATEWAY, exception.getStatus());
         assertEquals("Bad Gateway", exception.getMessage());
     }
 
@@ -121,12 +117,10 @@ class GarminPayProxyIT extends BaseIT {
                 .withHeader("Content-Type", "application/json")
                 .withBody("{\"path\":\"/health\", \"status\":502, \"message\":\"Bad Gateway\"}")));
 
-        GarminPayApiException exception = assertThrows(GarminPayApiException.class, () -> {
-            garminPayProxy.getHealthStatus();
-        });
+        GarminPayApiException exception = assertThrows(GarminPayApiException.class, garminPayProxy::getHealthStatus);
 
         assertEquals("/health", exception.getPath());
-        assertEquals(502, exception.getStatus());
+        assertEquals(HttpStatus.SC_BAD_GATEWAY, exception.getStatus());
         assertEquals("Bad Gateway", exception.getMessage());
     }
 
@@ -144,7 +138,6 @@ class GarminPayProxyIT extends BaseIT {
         stubFor(post(urlPathEqualTo("/oauth/token"))
             .withHeader("Authorization", equalTo("Basic " + Base64.getEncoder().encodeToString((clientID + ":" + clientSecret).getBytes())))
             .withHeader("Content-Type", equalTo("application/x-www-form-urlencoded"))
-            .withRequestBody(equalTo("grant_type=client_credentials"))
             .willReturn(aResponse()
                 .withStatus(200)
                 .withHeader("Content-Type", "application/json")
@@ -162,18 +155,15 @@ class GarminPayProxyIT extends BaseIT {
         stubFor(post(urlPathEqualTo("/oauth/token"))
             .withHeader("Authorization", equalTo("Basic " + Base64.getEncoder().encodeToString((clientID + ":" + clientSecret).getBytes())))
             .withHeader("Content-Type", equalTo("application/x-www-form-urlencoded"))
-            .withRequestBody(equalTo("grant_type=client_credentials"))
             .willReturn(aResponse()
-                .withStatus(401) // Unauthorized
+                .withStatus(401)
                 .withHeader("Content-Type", "application/json")
                 .withBody("{\"path\":\"/oauth/token\", \"status\":401, \"message\":\"Unauthorized\"}")));
 
-        GarminPayApiException exception = assertThrows(GarminPayApiException.class, () -> {
-            garminPayProxy.getOAuthAccessToken(clientID, clientSecret);
-        });
+        GarminPayApiException exception = assertThrows(GarminPayApiException.class, () -> garminPayProxy.getOAuthAccessToken(clientID, clientSecret));
 
         assertEquals("/oauth/token", exception.getPath());
-        assertEquals(401, exception.getStatus());
+        assertEquals(HttpStatus.SC_UNAUTHORIZED, exception.getStatus());
         assertEquals("Unauthorized", exception.getMessage());
     }
 
@@ -209,12 +199,10 @@ class GarminPayProxyIT extends BaseIT {
                 .withHeader("Content-Type", "application/json")
                 .withBody("{\"path\":\"/config/encryptionKeys\", \"status\":400, \"message\":\"Bad Request\"}")));
 
-        GarminPayApiException exception = assertThrows(GarminPayApiException.class, () -> {
-            garminPayProxy.exchangeKeys(mockOauthToken, TestUtils.TESTING_ENCODED_PUBLIC_ECC_KEY);
-        });
+        GarminPayApiException exception = assertThrows(GarminPayApiException.class, () -> garminPayProxy.exchangeKeys(mockOauthToken, TestUtils.TESTING_ENCODED_PUBLIC_ECC_KEY));
 
         assertEquals("/config/encryptionKeys", exception.getPath());
-        assertEquals(400, exception.getStatus());
+        assertEquals(HttpStatus.SC_BAD_REQUEST, exception.getStatus());
         assertEquals("Bad Request", exception.getMessage());
     }
 
@@ -252,6 +240,6 @@ class GarminPayProxyIT extends BaseIT {
                 .withHeader("Content-Type", "application/json")
                 .withBody(errorResponseBody)));
 
-        assertThrows(GarminPaySDKException.class, () -> garminPayProxy.registerCard("mockOAuthToken", "mockEncryptedCardData"));
+        assertThrows(GarminPayApiException.class, () -> garminPayProxy.registerCard("mockOAuthToken", "mockEncryptedCardData"));
     }
 }
